# SimpleWebsocketChat

./: .env  .gitignore  README.md  __main__.py  log.ini  main.py  pyproject.toml
src/backend/: __init__.py  middleware.py  service.py
src/backend/endpoints/: __init__.py  auth_router.py  websocket_router.py
src/backend/websocket/: websocket.py
src/frontend/: package-lock.json  package.json  webpack.config.js
src/frontend/public/: index.html
src/frontend/src/: app.js  classes.sass  index.js  index.sass  var.sass
src/frontend/src/components/: api_connection.js
src/frontend/src/pages/chat/: index.js  index.sass
src/frontend/src/pages/signin/: index.js  index.sass
