[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = 'SimpleWebsocketChat'
version = '0.1.0'
description = 'Ein simpler chat mit fastapi und react'
requires-python = '>=3.8'
authors = [
    {name = 'Marcel Stiebing'}
]
dependencies = [
    'uvicorn==0.21.1',
    'python-dotenv==1.0.0',
    'pydantic==1.10.7',
    'fastapi==0.95.0',
    'jinja2==3.1.2',
]

[project.optional-dependencies]
dev = [
    'isort==5.12.0',
    'black==23.1.0',
    'flake8==6.0.0',
    'flake8-pyproject==1.2.2',
    'websockets==11.0.1',
]

[project.urls]
'repository' = 'https://github.com/Gandori/SimpleWebsocketChat'

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "black"